import java.util.ArrayList;

public class Main {
   static ArrayList<Game> games = new ArrayList<>();
    public static void main(String[] args) {
        Game game = new Game("Monopoly");
       games.add(game);
       game.runDialog();

    }

}